--- a/main.css
+++ b/main.css
@@ -35,7 +35,7 @@ body {
   background-position: center;
   background-size: cover;
   float: left;
-  width: 75%;
+  width: 73%;
 }
 
 .rightcolumn {
@@ -52,9 +52,6 @@ a {
 }
 
 .main_links:hover {
-  -webkit-box-shadow: inset 0px 0px 60px -15px rgba(0,0,0,0.75);
-  -moz-box-shadow: inset 0px 0px 60px -15px rgba(0,0,0,0.75);
-  box-shadow: inset 0px 0px 60px -15px rgba(0,0,0,0.75);
   background-color: #ec91a6;
 }
 
@@ -196,7 +193,7 @@ a {
 
 #resume img {
   box-shadow: var(--shadow);
-  width: 80%;
+  width: 60%;
   margin-bottom: 20px;
 
 }
@@ -213,7 +210,7 @@ a {
 }
 
 .btn:hover {
-  background-color: magenta;
+  background-color: #ec91a6;
 }
 
 /*---------------------TABS (w3schools)---------------------*/
@@ -307,13 +304,10 @@ div.desc {
 .responsiveVideo {
   width: 350px;
   height=: 400px;
-  /* padding: 0 6px; */
-  float: left;
+  display: inline-block;
+
 }
 /*--------------------------------------------------------------------------------------------------------------*/
-
-/*---------------------------------------------------------------------------------------------------------------*/
-
 
 .row-one {
   list-style: none;
@@ -364,9 +358,20 @@ div.desc {
   }
 }
 
+@media screen and (max-width: 1830px) {
+  div.gallery img {
+    width: 90%;
+    margin-left: 60%;
+  }
+  div.desc {
+    width: 90%;
+    margin-left: 60%;
+  }
+}
+
+
 @media screen and (max-width: 1034px) {
   /*---- Nav for Mobile------*/
-
 
   .social_deets {
       padding: 0px;
@@ -386,9 +391,18 @@ div.desc {
   .fa-twitter {
     margin: 0px;
   }
+
+
 }
 
+@media screen and (max-width: 884px) {
+  div.gallery img {
+    margin-left: 47%;
+  }
+  div.desc {
 
+  }
+}
 
 @media screen and (max-width: 800px) {
 
